clusters/vollminlab-cluster/mediastack/plex/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: mediastack
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    shlink.vollminlab.com/slug: plex
  labels:
    app: plex
    env: production
    category: media
spec:
  ingressClassName: nginx
  rules:
    - host: plex.vollminlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
  tls:
    - hosts:
        - plex.vollminlab.com
      secretName: wildcard-tls
